# LivingBotFramework

./: .env.example  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: integration-tests.yml  lint.yml  tests.yml
src/livingbot/: __main__.py  activity_notes.py  bot.py  calendar.py  clock.py  config.py  hobbies.py  image.py  inventory.py  llm.py  llm_config.py  memory.py  mood.py  observability.py  prompts.py  queue.py  relations.py  spending.py  spontaneous.py  stories.py  timeformat.py  tools.py
src/livingbot/admin/: app.py  context.py
src/livingbot/admin/pages/: calendar.py  hobbies.py  inventory.py  layout.py  memories.py  mood.py  overview.py  relations.py  spending.py  stories.py  tools.py
src/livingbot/workflows/: photo.json  selfie.json  workflow.json
tests/: test_activity_notes.py  test_bot.py  test_calendar.py  test_hobbies.py  test_image.py  test_inventory.py  test_llm.py  test_memory.py  test_mood.py  test_queue.py  test_relations.py  test_spending.py  test_stories.py  test_timeformat.py  test_tools.py
tests/integration/: conftest.py  test_calendar_tools.py  test_discord_behavior.py  test_hobby_pickup.py  test_hobby_tone.py  test_inventory_tools.py  test_load_context_tool.py  test_mood_tone.py  test_relation_updater.py  test_spending_tools.py  test_spontaneous.py  test_story_generation.py  test_take_photo_tool.py  test_week_planner.py
