[project]
name = "livingbot"
version = "0.1.0"
description = "Simple Discord bot"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.9",
    "discord-py>=2.7.1",
    "mem0ai>=2.0.4",
    "pydantic-ai>=1.104.0",
]

[project.scripts]
livingbot = "livingbot.bot:run"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.15",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--ignore=tests/integration"
