[project]
name = "livingbot"
version = "0.1.0"
description = "A Discord bot that lives like a real person"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.9",
    "discord-py>=2.7.1",
    "httpx>=0.28.1",
    "logfire>=4.34.0",
    "mem0ai>=2.0.4",
    "nicegui>=3.13.0",
    "openai>=2.38.0",
    "pydantic-ai>=2.16.0",
]

[project.scripts]
livingbot = "livingbot.bot:run"
livingbot-admin = "livingbot.admin.app:run"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.15",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--ignore=tests/integration"

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]
exclude = ["tests/"]

[[tool.mypy.overrides]]
module = ["mem0", "mem0.*"]
ignore_missing_imports = true

[tool.logfire]
ignore_no_config = true
